--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^29.1.2",
     "@types/node": "^18.8.5",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
@@ -47,7 +45,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@reduxjs/toolkit": "^1.8.6",
+    "@testing-library/jest-dom": "^5.16.5",
     "@tsconfig/create-react-app": "^1.0.2",
-    "gh-pages": "^4.0.0"
+    "@types/jest": "^29.2.0",
+    "enzyme": "^3.11.0",
+    "gh-pages": "^4.0.0",
+    "jest": "^27.5.1",
+    "redux-mock-store": "^1.5.4"
   }
 }
